# segundo_parcial

./: README.md  package.xml  readme.txt  setup.cfg  setup.py
launch/: primer_punto.launch.py  segundo_punto.launch.py
rviz_config/: primer_punto.rviz  segundo_punto.rviz  segundo_punto2.rviz
segundo_parcial/: pub_segmentation.py  sub_and_process_img.py
