<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>segundo_parcial</name>
  <version>0.0.0</version>
  <description>Example of basic sensor data managing with cv_bridge</description>
  <maintainer email="alejandro.perdomo@uao.edu.co">alejandro</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>image_transtport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opencv2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>demo_nodes_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
